@@ -1,3 +1,8 @@
+2005-05-25  Manish Singh  <yosh@gimp.org>
+
+	* gobject/pygiochannel.c: Pass gsize to GIOChannel functions that
+	expect them.
+
 2005-05-25  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
 
 	* examples/gtk/widget.py (PyGtkWidget.do_realize): move_resize()
